# shib-keygen-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
ci-scripts/: Dockerfile  pipeline_shib-keygen-api.groovy
shib_keygen_api/: __init__.py
shib_keygen_api/generator/: __init__.py
shib_keygen_api/plugins/: __init__.py  dir.py  stdout.py  vault.py
tests/: conftest.py  test_generator.py  test_shib_keygen_api.py
tests/plugins/: test_plugins.py  test_stdout.py
