[tool.poetry]
name = "shib-keygen-api"
version = "0.1.0"
description = "An API which generates Shibboleth SP/SAML2 metadata certificate, keys and stores them in e.g. Vault"
authors = ["Simon Lundström <simlu+github@su.se>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^7"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pylint = "^2.17.5"
black = "^23.7.0"
mypy = "^1.5.1"

[tool.poetry.plugins."shib_keygen_api.plugins"]
stdout = "shib_keygen_api.plugins.stdout:Stdout"
dir = "shib_keygen_api.plugins.dir:Dir"

[tool.pylint]
    [tool.pylint.master]
    disable= [
        'missing-docstring',
        ]

    output-format = 'parseable'

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
show_error_codes = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
