[tool.poetry]
name = "shib-keygen-api"
version = "1.5.0"
description = "An API which generates Shibboleth SP/SAML2 metadata certificate, keys and stores them in e.g. Vault"
authors = ["Simon Lundström <simlu+github@su.se>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1"
hvac = { version = "^2.2", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^9"

[tool.poetry.group.dev.dependencies]
isort = "^8"
pylint = "^4"
black = "^26"
mypy = "^1"

[tool.poetry.extras]
vault = ["hvac"]

[tool.poetry.plugins."shib_keygen_api.plugins"]
stdout = "shib_keygen_api.plugins.stdout:Stdout"
dir = "shib_keygen_api.plugins.dir:Dir"
vault = "shib_keygen_api.plugins.vault:Vault"

[tool.pylint]
    [tool.pylint.master]
    disable= [
        'missing-docstring',
        ]

    output-format = 'parseable'

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
show_error_codes = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
